# Robot-ros

devel/: .catkin  local_setup.sh
devel/include/arbotix_msgs/: Analog.h  Digital.h  EnableRequest.h  EnableResponse.h  RelaxRequest.h  RelaxResponse.h  SetSpeedRequest.h  SetSpeedResponse.h  SetupChannelRequest.h  SetupChannelResponse.h
devel/include/learing_topic/: Person.h
devel/include/learning_commuication/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  DoDishesAction.h  DoDishesActionFeedback.h  DoDishesActionGoal.h  DoDishesActionResult.h  DoDishesFeedback.h  (+3 more)
install/: local_setup.sh  setup.sh
src/GTC50/: CMakeLists.txt  package.xml
src/GTC50-2/: CMakeLists.txt  package.xml
src/GTC50/launch/: display.launch  gazebo.launch
src/GTC50/meshes/: base_link.STL  grasping_frame.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/GTC50/urdf/: GTC50.xacro
src/GTC50_moveit_config/: .setup_assistant  CMakeLists.txt
src/UR10_zj/: CMakeLists.txt  package.xml  urdf.rviz
src/book/: 空间七自由度冗余机械臂动力学建模与控制研究_周诚.caj  空间冗余机械臂运动优化与轨迹跟踪控制研究_卢绍田.caj
src/learing_topic/: CMakeLists.txt
src/learning_commuication/: CMakeLists.txt
src/learning_launch/: package.xml
src/learning_parameter/: CMakeLists.txt
src/learning_service/: CMakeLists.txt
src/learning_tf/: package.xml
src/mbot_navigation/: CMakeLists.txt
src/robot_vision/: camera_calibration.yaml
src/机器人研究/: ._GTC50_IK_DIS.m  ._GTC50_MonteCarlo.m  ._GTC50_fk.m  ._周杰总结—机器人工具箱使用说明.docx  GTC50_DIS.slx  GTC50_IK_DIS.m  GTC50_MonteCarlo.m  GTC50_XOY平面蒙特卡洛工作空间.opju  GTC50_XOZ平面蒙特卡洛工作空间.opju  GTC50__modified_DH.m  GTC50_fk.m  GTC50_fkine5.m  GTC50_standard_DH_new.m  GTP50C.m  GitHub.lnk  fakonggangjianmo.m  newpos1.mat  newpos2.mat  newpos3.mat  newpos4.mat  trajectory.m  zhoujie_fk.m  协作机器人零力控制与碰撞检测技术研究_陈赛旋.xml  周杰总结—机器人工具箱使用说明.docx
src/机器人研究/GTC50/GTC50/: CMakeLists.txt  package.xml
src/机器人研究/GTC50/GTC50/launch/: view_arm.launch
src/机器人研究/GTC50/GTC50/meshes/: link1.STL  link4.STL  link5.STL  link6.STL
src/机器人研究/GTC50/GTC50/urdf/: GTC50.xacro
(+1037 files in other folders)
